--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,3 +1,4 @@
+# Prefix
 set-option -g prefix C-t
 
 # Horizonal split window
@@ -21,72 +22,72 @@ bind-key -r L resize-pane -R 5
 # Set tmux to Vi mode
 set-window-option -g mode-keys vi
 
-# Copy mode Settings
-setw -g mode-keys vi
-bind-key -T copy-mode-vi 'v' send-keys -X begin-selection
-bind-key -T copy-mode-vi 'V' send-keys -X select-line
-bind-key -T copy-mode-vi 'C-v' send-keys -X rectangle-toggle
-bind-key -T copy-mode-vi 'y' send-keys -X copy-pipe "reattach-to-user-namespace pbcopy"
-bind-key -T copy-mode-vi 'Escape' send-keys -X clear-selection
-bind-key -T copy-mode-vi 'C-n' send-keys -X page-up
-bind-key -T copy-mode-vi 'C-f' send-keys -X page-down
-bind-key -T copy-mode-vi 'C-u' send-keys -X scroll-up
-bind-key -T copy-mode-vi 'C-d' send-keys -X scroll-down
-bind-key -T copy-mode-vi 'j' send-keys -X cursor-down
-bind-key -T copy-mode-vi 'k' send-keys -X cursor-up
-
-# Enable mouse effect
-setw -g mouse on
-
-# 256色端末を使用する
-set -g default-terminal "screen-256color"
-
-# ステータスバーの色を設定する
-set -g status-fg white
-set -g status-bg black
-
-# ウィンドウリストの色を設定する
-setw -g window-status-fg cyan
-setw -g window-status-bg default
-setw -g window-status-attr dim
-# アクティブなウィンドウを目立たせる
-setw -g window-status-current-fg white
-setw -g window-status-current-bg red
-setw -g window-status-current-attr bright
-
-# ペインボーダーの色を設定する
-set -g pane-border-fg green
-set -g pane-border-bg black
-
-# アクティブなペインを目立たせる
-set -g pane-active-border-fg white
-set -g pane-active-border-bg yellow
-
-# コマンドラインの色を設定する
-set -g message-fg white
-set -g message-bg black
-set -g message-attr bright
-
-# ステータスバーを設定する
-## 左パネルを設定する
-set -g status-left-length 40
-set -g status-left "#[fg=green]Session: #S #[fg=yellow]#I #[fg=cyan]#P"
-
-## 右パネルを設定する
-set -g status-right "#[fg=cyan][%Y-%m-%d(%a) %H:%M]"
-
-## リフレッシュの間隔を設定する(デフォルト 15秒)
-set -g status-interval 60
-
-## ウィンドウリストの位置を中心寄せにする
-set -g status-justify centre
-
-## ヴィジュアルノーティフィケーションを有効にする
-setw -g monitor-activity on
-set -g visual-activity on
-
-## ステータスバーを上部に表示する
-set -g status-position top
-
-## クリップボード共有を有効にする
-#set-option -g default-command "reattach-to-user-namespace -l zsh"
+# # Copy mode Settings
+# setw -g mode-keys vi
+# bind-key -T copy-mode-vi 'v' send-keys -X begin-selection
+# bind-key -T copy-mode-vi 'V' send-keys -X select-line
+# bind-key -T copy-mode-vi 'C-v' send-keys -X rectangle-toggle
+# bind-key -T copy-mode-vi 'y' send-keys -X copy-pipe "reattach-to-user-namespace pbcopy"
+# bind-key -T copy-mode-vi 'Escape' send-keys -X clear-selection
+# bind-key -T copy-mode-vi 'C-n' send-keys -X page-up
+# bind-key -T copy-mode-vi 'C-f' send-keys -X page-down
+# bind-key -T copy-mode-vi 'C-u' send-keys -X scroll-up
+# bind-key -T copy-mode-vi 'C-d' send-keys -X scroll-down
+# bind-key -T copy-mode-vi 'j' send-keys -X cursor-down
+# bind-key -T copy-mode-vi 'k' send-keys -X cursor-up
+#
+# # Enable mouse effect
+# setw -g mouse on
+#
+# # 256色端末を使用する
+# set -g default-terminal "screen-256color"
+#
+# # ステータスバーの色を設定する
+# set -g status-fg white
+# set -g status-bg black
+#
+# # ウィンドウリストの色を設定する
+# setw -g window-status-fg cyan
+# setw -g window-status-bg default
+# setw -g window-status-attr dim
+# # アクティブなウィンドウを目立たせる
+# setw -g window-status-current-fg white
+# setw -g window-status-current-bg red
+# setw -g window-status-current-attr bright
+#
+# # ペインボーダーの色を設定する
+# set -g pane-border-fg green
+# set -g pane-border-bg black
+#
+# # アクティブなペインを目立たせる
+# set -g pane-active-border-fg white
+# set -g pane-active-border-bg yellow
+#
+# # コマンドラインの色を設定する
+# set -g message-fg white
+# set -g message-bg black
+# set -g message-attr bright
+#
+# # ステータスバーを設定する
+# ## 左パネルを設定する
+# set -g status-left-length 40
+# set -g status-left "#[fg=green]Session: #S #[fg=yellow]#I #[fg=cyan]#P"
+#
+# ## 右パネルを設定する
+# set -g status-right "#[fg=cyan][%Y-%m-%d(%a) %H:%M]"
+#
+# ## リフレッシュの間隔を設定する(デフォルト 15秒)
+# set -g status-interval 60
+#
+# ## ウィンドウリストの位置を中心寄せにする
+# set -g status-justify centre
+#
+# ## ヴィジュアルノーティフィケーションを有効にする
+# setw -g monitor-activity on
+# set -g visual-activity on
+#
+# ## ステータスバーを上部に表示する
+# set -g status-position top
+#
+# ## クリップボード共有を有効にする
+# #set-option -g default-command "reattach-to-user-namespace -l zsh"
