--- a/.tmux.conf
+++ b/.tmux.conf
@@ -91,3 +91,11 @@ set-window-option -g mode-keys vi
 #
 # ## クリップボード共有を有効にする
 # #set-option -g default-command "reattach-to-user-namespace -l zsh"
+
+# Install tmux-plugin
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run '~/.tmux/plugins/tpm/tpm'
+
