--- a/.tmux.conf
+++ b/.tmux.conf
@@ -40,7 +40,7 @@ bind-key -T copy-mode-vi 'k' send-keys -X cursor-up
 setw -g mouse on
 
 # 256色端末を使用する
-set -g default-terminal "screen-256color"
+# set -g default-terminal "screen-256color"
 
 # ステータスバーの色を設定する
 # set -g status-fg white
