--- a/.tmux.conf
+++ b/.tmux.conf
@@ -13,6 +13,12 @@ bind-key j select-pane -D
 bind-key k select-pane -U
 bind-key l select-pane -R
 
+# show window tree
+bind-key 'C-t' choose-tree -s
+
+# Reload tmux.conf
+bind-key 'C-r' source-file ~/.tmux.conf \; display "Reloaded!"
+
 # Resize pane
 bind-key -r H resize-pane -L 5
 bind-key -r J resize-pane -D 5
