--- a/.tmux.conf
+++ b/.tmux.conf
@@ -26,14 +26,14 @@ set-window-option -g mode-keys vi
 setw -g mode-keys vi
 setw -g mouse on
 set -g default-terminal "screen-256color"
-set -g status-left-length 40
-set -g status-left "#[fg=green]Session: #S #[fg=yellow]#I #[fg=cyan]#P"
-set -g status-right "#[fg=cyan][%Y-%m-%d(%a) %H:%M]"
-set -g status-interval 60
-set -g status-justify centre
-setw -g monitor-activity on
-set -g visual-activity on
-set -g status-position top
+# set -g status-left-length 40
+# set -g status-left "#[fg=green]Session: #S #[fg=yellow]#I #[fg=cyan]#P"
+# set -g status-right "#[fg=cyan][%Y-%m-%d(%a) %H:%M]"
+# set -g status-interval 60
+# set -g status-justify centre
+# setw -g monitor-activity on
+# set -g visual-activity on
+# set -g status-position top
 set-option -g default-command "reattach-to-user-namespace -l zsh"
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
