update tmux conf

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,4 +1,7 @@
 set-option -g prefix C-t
+bind-key -r r source-file ~/.tmux.conf \; display "Reloaded!"
+bind-key 'C-t' choose-tree -s
+
 bind-key | split-window -h
 bind-key - split-window -v
 bind-key h select-pane -L
@@ -9,32 +12,24 @@ bind-key -r H resize-pane -L 5
 bind-key -r J resize-pane -D 5
 bind-key -r K resize-pane -U 5
 bind-key -r L resize-pane -R 5
-bind-key 'C-t' choose-tree -s
-bind-key 'C-r' source-file ~/.tmux.conf \; display "Reloaded!"
+
 bind-key -T copy-mode-vi 'v' send-keys -X begin-selection
 bind-key -T copy-mode-vi 'V' send-keys -X select-line
-bind-key -T copy-mode-vi 'C-v' send-keys -X rectangle-toggle
-bind-key -T copy-mode-vi 'y' send-keys -X copy-pipe "reattach-to-user-namespace pbcopy"
 bind-key -T copy-mode-vi 'Escape' send-keys -X clear-selection
-bind-key -T copy-mode-vi 'C-n' send-keys -X page-up
-bind-key -T copy-mode-vi 'C-f' send-keys -X page-down
+bind-key -T copy-mode-vi 'C-v' send-keys -X rectangle-toggle
+bind-key -T copy-mode-vi 'C-p' send-keys -X page-up
+bind-key -T copy-mode-vi 'C-n' send-keys -X page-down
 bind-key -T copy-mode-vi 'C-u' send-keys -X scroll-up
 bind-key -T copy-mode-vi 'C-d' send-keys -X scroll-down
+bind-key -T copy-mode-vi 'y' send-keys -X copy-pipe "reattach-to-user-namespace pbcopy"
 bind-key -T copy-mode-vi 'j' send-keys -X cursor-down
 bind-key -T copy-mode-vi 'k' send-keys -X cursor-up
-set-window-option -g mode-keys vi
-setw -g mode-keys vi
-setw -g mouse on
-set -g default-terminal "screen-256color"
-# set -g status-left-length 40
-# set -g status-left "#[fg=green]Session: #S #[fg=yellow]#I #[fg=cyan]#P"
-# set -g status-right "#[fg=cyan][%Y-%m-%d(%a) %H:%M]"
-# set -g status-interval 60
-# set -g status-justify centre
-# setw -g monitor-activity on
-# set -g visual-activity on
-# set -g status-position top
+
+set-option -wg mouse on
+set-option -wg mode-keys vi
 set-option -g default-command "reattach-to-user-namespace -l zsh"
+set -g default-terminal "screen-256color"
+set -g status-right "#[fg=colour256][%Y-%m-%d(%a) %H:%M]"
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 run '~/.tmux/plugins/tpm/tpm'
