--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,6 +1,8 @@
 set-option -g prefix C-t
 bind-key -r r source-file ~/.tmux.conf \; display "Reloaded!"
-bind-key 'C-t' choose-tree -s
+# bind-key 'C-t' choose-tree -s
+bind-key 'C-t' run-shell "tmux list-sessions -F \"[##{session_windows}] ##S\" | fzf-tmux | sed 's/^\[[0-9]*\] //' | xargs tmux switch -t"
+bind w popup -E "$HOME/bin/tmux-fzf-session"
 
 bind-key | split-window -h
 bind-key - split-window -v
