--- a/.tmux.conf
+++ b/.tmux.conf
@@ -30,3 +30,8 @@ set-option -wg mode-keys vi
 set-option -g default-command "reattach-to-user-namespace -l zsh"
 set -g default-terminal "screen-256color"
 set -g status-right "#[fg=colour256][%Y-%m-%d(%a) %H:%M]"
+
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'dracula/tmux'
+run '~/.tmux/plugins/tpm/tpm'
