--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,6 +1,6 @@
 set-option -g prefix C-t
-bind-key -r C-r source-file ~/.tmux.conf \; display "Reloaded!"
-bind-key -r C-j display-popup -E "tmux list-sessions | sed -E 's/:.*$//' | grep -v \"^$(tmux display-message -p '#S')\$\" | fzf --reverse | xargs tmux switch-client -t"
+bind-key r source-file ~/.tmux.conf \; display "Reloaded!"
+bind-key s display-popup -E "tmux list-sessions | sed -E 's/:.*$//' | grep -v \"^$(tmux display-message -p '#S')\$\" | fzf --reverse | xargs tmux switch-client -t"
 
 bind-key | split-window -h
 bind-key - split-window -v
