--- a/.tmux.conf
+++ b/.tmux.conf
@@ -28,10 +28,16 @@ bind-key -T copy-mode-vi 'k' send-keys -X cursor-up
 set-option -wg mouse on
 set-option -wg mode-keys vi
 set-option -g default-command "reattach-to-user-namespace -l zsh"
-set -g default-terminal "screen-256color"
-set -g status-right "#[fg=colour256][%Y-%m-%d(%a) %H:%M]"
 
 # theme
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'dracula/tmux'
+set -g @dracula-plugins "battery git time"
+set -g @dracula-show-left-sep 
+set -g @dracula-show-flags true
+set -g @dracula-show-timezone false
+set -g @dracula-day-month false
+set -g @dracula-show-fahrenheit false
+set -g @dracula-show-location false
+
 run '~/.tmux/plugins/tpm/tpm'
