--- a/.tmux.conf
+++ b/.tmux.conf
@@ -32,12 +32,11 @@ set-option -g default-command "reattach-to-user-namespace -l zsh"
 # theme
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'dracula/tmux'
-set -g @dracula-plugins "battery git time"
-set -g @dracula-show-left-sep 
+set -g @dracula-plugins "battery network time"
+set -g @dracula-show-powerline true
+set -g @dracula-show-right-sep 
 set -g @dracula-show-flags true
 set -g @dracula-show-timezone false
 set -g @dracula-day-month false
-set -g @dracula-show-fahrenheit false
-set -g @dracula-show-location false
 
 run '~/.tmux/plugins/tpm/tpm'
